; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_task_hold_file_lock_assertion.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_task_hold_file_lock_assertion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@KERN_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ipc_importance_task_hold_file_lock_assertion(%struct.TYPE_5__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %6, i64* %5, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = call i64 @ipc_importance_task_is_any_receiver_type(%struct.TYPE_5__* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %28

10:                                               ; preds = %2
  %11 = call i32 (...) @ipc_importance_lock()
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @ipc_importance_task_hold_internal_assertion_locked(%struct.TYPE_5__* %12, i64 %13)
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* @KERN_SUCCESS, align 8
  %16 = load i64, i64* %5, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %26

18:                                               ; preds = %10
  %19 = load i64, i64* %4, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %19
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %21, align 4
  br label %26

26:                                               ; preds = %18, %10
  %27 = call i32 (...) @ipc_importance_unlock()
  br label %28

28:                                               ; preds = %26, %2
  %29 = load i64, i64* %5, align 8
  ret i64 %29
}

declare dso_local i64 @ipc_importance_task_is_any_receiver_type(%struct.TYPE_5__*) #1

declare dso_local i32 @ipc_importance_lock(...) #1

declare dso_local i64 @ipc_importance_task_hold_internal_assertion_locked(%struct.TYPE_5__*, i64) #1

declare dso_local i32 @ipc_importance_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
